@@ -1679,11 +1679,6 @@ name|startIndex
 condition|)
 return|return;
 name|int
-name|oldlen
-init|=
-name|wlen
-decl_stmt|;
-name|int
 name|startWord
 init|=
 call|(
@@ -3014,34 +3009,16 @@ operator|<
 name|numWords
 condition|)
 block|{
-name|long
-index|[]
-name|newBits
-init|=
-operator|new
-name|long
-index|[
-name|numWords
-index|]
-decl_stmt|;
-name|System
+name|bits
+operator|=
+name|ArrayUtil
 operator|.
-name|arraycopy
+name|grow
 argument_list|(
 name|bits
 argument_list|,
-literal|0
-argument_list|,
-name|newBits
-argument_list|,
-literal|0
-argument_list|,
-name|wlen
+name|numWords
 argument_list|)
-expr_stmt|;
-name|bits
-operator|=
-name|newBits
 expr_stmt|;
 block|}
 block|}
